@@ -20,22 +20,8 @@ trait IntegrationTesterBase {
       case Some(p) => s"$javaHomeBin${System.getProperty("path.separator")}${p}"
     }
 
-    // JDK 23+ emits warnings on first call to deprecated `sun.misc.Unsafe`
-    // methods (e.g. `objectFieldOffset`, used by Scala's `LazyVals`). Those
-    // warnings are stderr noise that breaks golden-text test assertions, so
-    // silence them in spawned Mill subprocesses (and any nested forks) via
-    // `JDK_JAVA_OPTIONS`. The JVM also prints a `Picked up JDK_JAVA_OPTIONS:`
-    // NOTE line, which test framework `normalize` helpers must filter.
-    val jdk23PlusOpts =
-      if (Runtime.version().feature() >= 23)
-        Map(
-          "JDK_JAVA_OPTIONS" ->
-            "--sun-misc-unsafe-memory-access=allow --enable-native-access=ALL-UNNAMED"
-        )
-      else Map.empty[String, String]
-
-    if (!propagateJavaHome) jdk23PlusOpts
-    else Map("JAVA_HOME" -> sys.props("java.home"), "PATH" -> newPath) ++ jdk23PlusOpts
+    if (!propagateJavaHome) Map.empty
+    else Map("JAVA_HOME" -> sys.props("java.home"), "PATH" -> newPath)
   }
 
   private lazy val useSharedOutputDir: Boolean =
